Set HomePage like Michael Rose

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,10 +1,4 @@
 <!DOCTYPE html>
-<!--
-    Basically Basic Jekyll Theme 1.1.3
-    Copyright 2017 Michael Rose - mademistakes.com | @mmistakes
-    Free for personal and commercial use under the MIT license
-    https://github.com/mmistakes/jekyll-basically-theme/blob/master/LICENSE.md
--->
 <html lang="{{ page.lang | default: site.lang | default: 'en-US' }}" class="no-js">
   {% include head.html %}
 
@@ -15,7 +9,7 @@
     <div class="sidebar-toggle-wrapper">
       <button class="toggle navicon-button larr" type="button">
         <span class="toggle-inner">
-          <span class="sidebar-toggle-label">{{ site.data.theme.t.menu | default: 'Menu' }}</span>
+          <span class="sidebar-toggle-label">menu</span>
           <span class="navicon"></span>
         </span>
       </button>
