--- a/_sass/basically-basic.scss
+++ b/_sass/basically-basic.scss
@@ -29,6 +29,7 @@
 @import "basically-basic/buttons";
 @import "basically-basic/icons";
 @import "basically-basic/intro";
+@import "basically-basic/sections";
 @import "basically-basic/navicons";
 @import "basically-basic/contact-lists";
 @import "basically-basic/syntax-highlighting";
