--- a/_sass/basically-basic/_mixins.scss
+++ b/_sass/basically-basic/_mixins.scss
@@ -4,4 +4,5 @@
 @import 'mixins/float';
 @import 'mixins/image';
 @import 'mixins/lists';
+@import 'mixins/scrim-gradient';
 @import 'mixins/text-truncate';
