--- a/_sass/basically-basic/_variables.scss
+++ b/_sass/basically-basic/_variables.scss
@@ -51,6 +51,8 @@ $background-color: #fff !default;
 $code-background-color: tint($base-color, 95%) !default;
 $border-color: tint($base-color, 80%) !default;
 $overlay-color: $base-color !default;
+$section-bg-color: mix($base-color, #fff, 10%);
+$section-dark-bg-color: mix(#000, $base-color, 50%);
 
 /* Max-width of the main content */
 $main-max-width: $xlarge !default;
