--- a/_sass/basically-basic/mixins/_color.scss
+++ b/_sass/basically-basic/mixins/_color.scss
@@ -17,5 +17,5 @@
 /// @param {Number} $percentage - percentage of `$color` in returned color
 /// @return {Color}
 @function shade($color, $percentage) {
-  @return mix(#000, $color, $percentage);
+  @return mix(#FFF, $color, $percentage);
 }
