--- a/_sass/basically-basic/_sections.scss
+++ b/_sass/basically-basic/_sections.scss
@@ -133,6 +133,7 @@
     $section-about-bg-color: mix(#7171C6, #4b3624, 100%);
 
     background-color: $section-about-bg-color;
+    background-image: url(https://elephwebb.github.io/assets/images/subastageek.jpg);
 
 
     &::before {
@@ -156,7 +157,8 @@
   &--post {
     $section-about-bg-color: mix(#EE5C42, #CD4F39, 100%);
 
-    background-color: $section-about-bg-color;
+    background-color: $section-about-bg-color;    
+    background-image: url(https://elephwebb.github.io/assets/images/background_code_medium.jpg);
 
     &::before {
       @include scrimgradient("to right", $section-about-bg-color);
