--- a/_sass/basically-basic/themes/_night.scss
+++ b/_sass/basically-basic/themes/_night.scss
@@ -6,6 +6,7 @@
 $base-color: #252a34 !default;
 $bad-color: #3a4750 !default;
 $text-color: #eaeaea !default;
+$menu-color: #000;
 $accent-color: #00adb5 !default;
 $background-color: #252a34 !default;
 $code-background-color: #fff !default;
