Updated '_sass/basically-basic/_sidebar.scss' via CloudCannon

--- a/_sass/basically-basic/_sidebar.scss
+++ b/_sass/basically-basic/_sidebar.scss
@@ -140,7 +140,7 @@
 .sidebar-toggle-label {
   -ms-flex-order: 2;
   order: 2;
-  color: $text-color;
+  color: $menu-color;
   margin-left: 0.5rem;
   font-weight: bold;
 }
