Updated '_sass/basically-basic/_navicons.scss' via CloudCannon

--- a/_sass/basically-basic/_navicons.scss
+++ b/_sass/basically-basic/_navicons.scss
@@ -51,6 +51,7 @@
 
 .navicon {
   position: relative;
+  color: $menu-color;
   width: $navicon-width;
   height: $navicon-height;
   transition-duration: $navicon-duration;
