--- a/_sass/basically-basic/themes/_night.scss
+++ b/_sass/basically-basic/themes/_night.scss
@@ -12,4 +12,4 @@ $background-color: #252a34 !default;
 $code-background-color: #fff !default;
 $border-color: rgba($text-color, 0.5) !default;
 $overlay-color: #fff !default;
-$navicon-content-bg: #000;
+$navicon-content-bg: #252a34;
