--- a/_includes/entry.html
+++ b/_includes/entry.html
@@ -9,18 +9,23 @@
     <h3 class="entry-title">
       <a href="{{ post.url | relative_url }" rel="bookmark">{{ title }}</a>
     </h3>
-   
+    {% assign feature_image = post.image.feature %}
+    {% if feature_image %}
+      <a href="#">
+        {% assign f = feature_image | split: '.' %}
+        <noscript><img src="{{ f[0] | relative_url }}-320.{{ f[1] }}" class="entry-image"></noscript>
+        <img data-sizes="auto"
+             src="{{ f[0] | relative_url }}-lq.{{ f[1] }}"
+             data-srcset="{{ f[0] | relative_url }}-lq.{{ f[1] }} 20w,
+                          {{ f[0] | relative_url }}-320.{{ f[1] }} 320w,
+                          {{ f[0] | relative_url }}-768.{{ f[1] }} 768w,
+                          {{ f[0] | relative_url }}-1024.{{ f[1] }} 1024w"
+             alt="{{ post.title | strip_html }}"
+             class="lazyload entry-image blur-up">
+      </a>
+ {% endif %}
   </header>
-   <footer class="entry-meta">
-    <ul>
-    {% if post.date %}
-      <li><span class="icon">{% include icon-calendar.svg %}</span><time class="entry-time" datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: "%B %-d, %Y" }}</time></li>
-    {% endif %}
-    {% if post.read_time %}
-      <li><span class="icon">{% include icon-stopwatch.svg %}</span>{% capture read_time %}{% include read-time.html %}{% endcapture %}{{ read_time | strip }}</li>
-    {% endif %}
-    </ul>
-  </footer>
+   
   <div class="entry-excerpt">
     {% if post.excerpt %}
       {{ post.excerpt | markdownify }}
