--- a/_includes/entry.html
+++ b/_includes/entry.html
@@ -7,7 +7,7 @@
 <article class="entry">
   <header class="entry-header">
     <h3 class="entry-title">
-      <a href="{{ post.url | relative_url }" rel="bookmark">{{ title }}</a>
+      <a href="{{ post.url | relative_url }}" rel="bookmark">{{ title }}</a>
     </h3>
     {% assign feature_image = post.image.feature %}
     {% if feature_image %}
@@ -38,6 +38,16 @@
     {% endif %}
     </ul>
   </footer>
- 
+  <div class="entry-excerpt">
+    {% if post.excerpt %}
+      {{ post.excerpt | markdownify }}
+      
+      {% if post.website %}     
+        <p><a href="{{ post.website }}" target="_blank" class="more-link">{{ site.data.theme.t.visit_website | default: 'Visit Website' }} <span class="icon icon--arrow-right">{% include icon-arrow-right.svg %}</span></a></p>
+      {% endif %}
+      
+        <p><a href="{{ post.url | relative_url }}" class="more-link">{{ site.data.theme.t.read_more | default: 'Read More' }} <span class="icon icon--arrow-right">{% include icon-arrow-right.svg %}</span></a></p>
+    {% endif %}
+  </div>
    
 </article>
