Updated '_includes/entry.html' via CloudCannon

--- a/_includes/entry.html
+++ b/_includes/entry.html
@@ -43,10 +43,10 @@
       {{ post.excerpt | markdownify }}
       
       
-        <p><a href="{{ post.website }}" target="_blank" class="more-link">{{ site.data.theme.t.visit_website | default: 'Visit Website' }} <span class="icon icon--arrow-right">{% include icon-arrow-right.svg %}</span></a></p>
+        <p><a href="{{ post.website }}" target="_blank" class="more-link">{{ site.data.theme.t.visit_website | default: 'Visit Website' }} <span class="icon icon--arrow-right">{% include icon-arrow-right.svg %}</span></a>
       
       
-        <p><a href="{{ post.url | relative_url }}" class="more-link">{{ site.data.theme.t.read_more | default: 'Read More' }} <span class="icon icon--arrow-right">{% include icon-arrow-right.svg %}</span></a></p>
+        | <a href="{{ post.url | relative_url }}" class="more-link">{{ site.data.theme.t.read_more | default: 'Read More' }} <span class="icon icon--arrow-right">{% include icon-arrow-right.svg %}</span></a></p>
     {% endif %}
   </div>
    
