--- a/_sass/basically-basic/themes/_default.scss
+++ b/_sass/basically-basic/themes/_default.scss
@@ -4,3 +4,11 @@
 
 // Intentionally left blank
 $bad-color: #3a4750 !default;
+$text-color: #fff !default;
+$menu-color: #252a34;
+$accent-color: #00adb5 !default;
+$background-color: #fff !default;
+$code-background-color: #fff !default;
+$border-color: rgba($text-color, 0.5) !default;
+$overlay-color: #fff !default;
+$navicon-content-bg: #252a34;
