--- a/_sass/basically-basic/themes/_steel.scss
+++ b/_sass/basically-basic/themes/_steel.scss
@@ -6,6 +6,7 @@
 $base-color: #3a4750 !default;
 $bad-color: #3a4750 !default;
 $text-color: #303841 !default;
+$menu-color: #252a34;
 $accent-color: #d72323 !default;
 $background-color: #eee !default;
 $code-background-color: #fff !default;
