--- a/_sass/basically-basic/themes/_default.scss
+++ b/_sass/basically-basic/themes/_default.scss
@@ -4,7 +4,7 @@
 
 // Intentionally left blank
 $bad-color: #3a4750 !default;
-$text-color: #fff !default;
+$text-color: #000 !default;
 $menu-color: #252a34;
 $accent-color: #00adb5 !default;
 $background-color: #fff !default;
