--- a/_sass/basically-basic/_sidebar.scss
+++ b/_sass/basically-basic/_sidebar.scss
@@ -121,7 +121,7 @@
 .sidebar-toggle-wrapper {
   position: fixed;
   color: $base-color;
-  background-image: url(https://elephwebb.github.io/assets/images/lego-brick-green.png);
+  background-image: url(https://mrjhonyvidal.github.io/assets/images/lego-brick-green.png);
   background-repeat: no-repeat;
   top: 0.675rem;
   right: 0;
